# api/api/user/user_api.go
@@ -9,24 +9,29 @@ import (
 	"net/http"
 )
 
-type User struct {
+type UserReq struct {
 	Username string `json:"username" example:"user"`
-	Password string `json:"password" example:"pwd"`
+	Password string `json:"password" example:"password"`
+}
+
+type UserResp struct {
+	Username string `json:"username" example:"user"`
+	Password string `json:"password" example:"password"`
 }
 
 // SignupUser godoc
 //
-//	@Summary      Signup an user
-//	@Description  Signup an user passing username and password in json
-//	@Tags         users
-//	@Accept       json
-//	@Produce      json
-//	@Param        account  body      User  true  "Add user"
-//	@Success      201      {object}  user.User
-//	@Failure      400
-//	@Failure      401
-//	@Router       /signup [post]
-//  @Security 	 JWT
+//		@Summary      Signup an user
+//		@Description  Signup an user passing username and password in json
+//		@Tags         users
+//		@Accept       json
+//		@Produce      json
+//		@Param        account  body      UserReq  true  "Add user"
+//		@Success      201      {object}  UserResp
+//		@Failure      400
+//		@Failure      401
+//		@Router       /signup [post]
+//	 	@Security 	 JWT
 func Signup(w http.ResponseWriter, r *http.Request) {
 	api.WriteLog("Signup User", r)
 	ok, err := api.VerifyToken(r)
@@ -55,11 +60,14 @@ func Signup(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
+	u := UserResp{
+		Username: p.Username,
+		Password: p.Password,
+	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusCreated)
-	json.NewEncoder(w).Encode(user)
+	json.NewEncoder(w).Encode(u)
 }
-
 
 // SigninUser godoc
 //
@@ -68,12 +76,13 @@ func Signup(w http.ResponseWriter, r *http.Request) {
 //	@Tags         users
 //	@Accept       json
 //	@Produce      json
-//	@Param        account  body      User  true  "Signin user"
-//	@Success      200      {object}  user.User
+//	@Param        user  body      UserReq  true  "Signin user"
+//	@Success      200   {object}  UserResp
 //	@Failure      400
 //	@Failure      401
+//	@Failure      404
 //	@Router       /signin [post]
-//  @Security 	 JWT
+//	@Security 	 JWT
 func Signin(w http.ResponseWriter, r *http.Request) {
 	api.WriteLog("Signin User", r)
 	ok, err := api.VerifyToken(r)
@@ -98,22 +107,17 @@ func Signin(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	if user == nil {
-		http.Error(w, "User does not exist", http.StatusBadRequest)
+		http.Error(w, "User does not exist", http.StatusNotFound)
 		return
 	}
 	if user.Password != p.Password {
-		http.Error(w, "Wrong password", http.StatusBadRequest)
+		http.Error(w, "Wrong password", http.StatusUnauthorized)
 		return
 	}
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-	u := User{
+	u := UserResp{
 		Username: user.Username,
 		Password: user.Password,
 	}
-
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(u)
@@ -121,15 +125,15 @@ func Signin(w http.ResponseWriter, r *http.Request) {
 
 // DeleteUser godoc
 //
-//	@Summary      Delete an user
-//	@Description  Delete user passing username
-//	@Tags         users
-//	@Param        username query string false "user to search by username"  Format(string)
-//	@Success      200       "DELETED"
-//	@Failure      400
-//	@Failure      401
-//	@Router       /user [delete]
-//  @Security 	 JWT
+//		@Summary      Delete an user
+//		@Description  Delete user passing username
+//		@Tags         users
+//		@Param        username query string false "user to search by username"  Format(string)
+//		@Success      200       "DELETED"
+//		@Failure      400
+//		@Failure      401
+//		@Router       /user [delete]
+//	 	@Security 	 JWT
 func Delete(w http.ResponseWriter, r *http.Request) {
 	api.WriteLog("Delete User", r)
 	ok, err := api.VerifyToken(r)
@@ -153,18 +157,18 @@ func Delete(w http.ResponseWriter, r *http.Request) {
 
 // UpdateUser godoc
 //
-//	@Summary      Update an user
-//	@Description  Update an user passing username and password in json
-//	@Tags         users
-//	@Accept       json
-//	@Produce      json
-//	@Param        account  body      User  true  "Update user"
-//	@Success      200      {object}  user.User
-//	@Failure      400
-//	@Failure      401
-//	@Failure      404
-//	@Router       /user [put]
-//  @Security 	 JWT
+//		@Summary      Update an user
+//		@Description  Update an user passing username and password in json
+//		@Tags         users
+//		@Accept       json
+//		@Produce      json
+//		@Param        account  body      UserReq  true  "Update user"
+//		@Success      200      {object}  UserResp
+//		@Failure      400
+//		@Failure      401
+//		@Failure      404
+//		@Router       /user [put]
+//	 	@Security 	 JWT
 func Update(w http.ResponseWriter, r *http.Request) {
 	api.WriteLog("Update User", r)
 	ok, err := api.VerifyToken(r)
@@ -188,22 +192,26 @@ func Update(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusNotFound)
 		return
 	}
+	u := UserResp{
+		Username: user.Username,
+		Password: user.Password,
+	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(user)
+	json.NewEncoder(w).Encode(u)
 }
 
 // GetUsers godoc
 //
-//	@Summary      Get all users
-//	@Description  Get all users
-//	@Tags         users
-//	@Produce      json
-//	@Success      200      {array}  user.User
-//	@Failure      400
-//	@Failure      401
-//	@Router       /users [get]
-//  @Security 	 JWT
+//		@Summary      Get all users
+//		@Description  Get all users
+//		@Tags         users
+//		@Produce      json
+//		@Success      200      {array}  UserResp
+//		@Failure      400
+//		@Failure      401
+//		@Router       /users [get]
+//	 	@Security 	 JWT
 func GetAll(w http.ResponseWriter, r *http.Request) {
 	api.WriteLog("Get Users", r)
 	ok, err := api.VerifyToken(r)
@@ -221,11 +229,30 @@ func GetAll(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
+	var usersResp []UserResp
+	for _, u := range users {
+		usersResp = append(usersResp, UserResp{
+			Username: u.Username,
+			Password: u.Password,
+		})
+	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(users)
+	json.NewEncoder(w).Encode(usersResp)
 }
 
+// GetUser godoc
+//
+//		@Summary      Get an user
+//		@Description  Get user passing username
+//		@Tags         users
+//		@Param        username query string false "user to search by username"  Format(string)
+//		@Success      200      {object}  UserResp
+//		@Failure      400
+//		@Failure      401
+//		@Failure      404
+//		@Router       /user [get]
+//	 	@Security 	 JWT
 func GetByUsername(w http.ResponseWriter, r *http.Request) {
 	api.WriteLog("Get User", r)
 	ok, err := api.VerifyToken(r)
@@ -240,10 +267,14 @@ func GetByUsername(w http.ResponseWriter, r *http.Request) {
 
 	user, err := userdao.GetByUsername(r.URL.Query().Get("username"))
 	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		http.Error(w, err.Error(), http.StatusNotFound)
 		return
+	}
+	u := UserResp{
+		Username: user.Username,
+		Password: user.Password,
 	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(user)
+	json.NewEncoder(w).Encode(u)
 }
